CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O2 -fPIC -std=c++11")
SET(CMAKE_CXX_FLAGS_DEBUG "-Wall -g -DEA1_DEBUG -fPIC -std=c++11")
INCLUDE_DIRECTORIES("/usr/include/lua5.2")
IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Release")
ENDIF(NOT CMAKE_BUILD_TYPE)
ADD_SUBDIRECTORY(ea1)
PROJECT(probo)
MESSAGE("${PROJECT_NAME} CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
ADD_EXECUTABLE(probo pfamily.cpp probo.cpp probolua.cpp probopwm.cpp ppca9685.cpp main.cpp)
TARGET_LINK_LIBRARIES(probo ea1 lua5.2)
